--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p><strong>E-mail</strong> joanasvsousa@outlook.pt </p>
         <p><strong>Website</strong> joanasvsousa.pt</p>
         <p><strong>Telm</strong> 918 597 258 </p>
-        <a href="contact.html">Contacto</a>
+        <a href="contacto.html">Contacto</a>
       </td>
     </tr>
   </table>
