--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <label>E-mail</label>
     <input type="email" name="email" value=""><br>
     <label>Mensagem</label><br>
-    <textarea name="name" rows="10" cols="30"></textarea><br>
+    <textarea name="mensagem" rows="10" cols="30"></textarea><br>
     <input type="file" name="ficheiro" value=""><br>
     <input type="submit" name="submit" value="Submit"><br>
   </form>
