--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
     <label>Mensagem</label><br>
     <textarea name="mensagem" rows="10" cols="30"></textarea><br>
     <input type="file" name="ficheiro" value=""><br>
-    <input type="submit" name="submit" value="Submit"><br>
+    <input type="submit" name="submit" value="Submit"/><br>
   </form>
 </body>
 <footer>
