--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
   <title>Contacto</title>
 </head>
 <body>
-  <form action="mailto:joanasvsousa@outlook.com" method="post" enctype="text/plain">
+  <form action="http://formspree.io/joanasvsousa@outlook.com" method="post" enctype="text/plain">
     <label>Nome</label>
     <input type="text" name="nome" value=""><br>
     <label>E-mail</label>
