--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
           <tr>
             <td><p>Udemy - The Complete 2022 Web Development Bootcamp
  (05/2021)</p>
-<p>UC: Front-End Web Development, HTML, CSS, Javascript, Bootstrap, Web Design, DOM, jQuery, Unix Command Line, Backend Web Development,</p>
-              <p>Node.js, Express.js, Database, SQL, MongoDB, Mongoose, RESTful API, React.js, Web3, Defi, Blockchain, Crypto Token, NFT</p></td>
+<p>UC: Front-End, HTML, CSS, Javascript, Bootstrap, Web Design, DOM, jQuery, Backend, Node.js, Express.js, Database, SQL, MongoDB, React.js, Web3, Defi, Blockchain, Crypto Token, NFT</p></td>
           </tr>
           <tr>
             <td>Miguel Brandão - Masterclass SEO (28/11/2019)</td>
