--- a/contacto.html
+++ b/contacto.html
@@ -2,17 +2,20 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Contacto</title>
+  <title>Contact</title>
 </head>
 <body>
+    <a href="index.html">Home</a>
+    <a href="curriculo.html">CV</a>
+  <a href="contacto.html"> Contact</a>
   <form action="http://formspree.io/joanasvsousa@outlook.com" method="post" enctype="text/plain">
-    <label>Nome</label>
-    <input type="text" name="nome" value=""><br>
+    <label>Name</label>
+    <input type="text" name="name" value=""><br>
     <label>E-mail</label>
     <input type="email" name="email" value=""><br>
-    <label>Mensagem</label><br>
-    <textarea name="mensagem" rows="10" cols="30"></textarea><br>
-    <input type="file" name="ficheiro" value=""><br>
+    <label>Message</label><br>
+    <textarea name="message" rows="10" cols="30"></textarea><br>
+    <input type="file" name="file" value=""><br>
     <input type="submit" name="submit" value="Submit"/><br>
   </form>
 </body>
