--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Currículo</title>
+  <title>JoanaSVSousa CV</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
           alt="Joana Sousa" height="250">
       <td>
         <h1>Joana Sofia Vitorino de Sousa</h1>
-        <p><strong>Idade</strong> 25 <strong>Localidade</strong> Faro <strong>Nacionalidade</strong> Portuguesa </p>
+        <p><strong>Age</strong> 25 <strong>City</strong> Faro <strong>Nationality</strong> Portuguese </p>
         <p><strong>E-mail</strong> joanasvsousa@outlook.pt </p>
         <p><strong>Website</strong> joanasvsousa.pt</p>
         <p><strong>Telm</strong> 918 597 258 </p>
@@ -32,30 +32,30 @@
           </tr>
           <tr>
             <td>
-              <p>Mais Algarve (06/2021 - Presente)
+              <p>Mais Algarve (06/2021 - Present)
               <p>
-              <p>Posição: Editora de Vídeo, Web Designer, Web Developer, SEO, Operadora de Câmara
+              <p>Position: Vídeo Editor, Web Designer, Web Developer, SEO, Camera Opertator
             </td>
           </tr>
           <tr>
             <td>
-              <p>Sebastião Leiria (10/2021 - Presente)
+              <p>Sebastião Leiria (10/2021 - Present)
               <p>
-              <p>Posição: Web Designer, Web Developer, SEO
+              <p>Position: Web Designer, Web Developer, SEO
             </td>
           </tr>
           <tr>
             <td>
-              <p>Apps 4 Work (10/2021 - Presente)
+              <p>Apps 4 Work (10/2021 - Present)
               <p>
-              <p>Posição: Web Designer, Web Developer, SEO
+              <p>Position: Web Designer, Web Developer, SEO
             </td>
           </tr>
           <tr>
             <td>
-              <p>Eng. João Morgado (11/2021 - Presente)
+              <p>Eng. João Morgado (11/2021 - Present)
               <p>
-              <p>Posição: Plantas de Eletricidade
+              <p>Position: Electricity and Communications plant designer.
             </td>
           </tr>
           <tr>
@@ -65,46 +65,46 @@
             <td>
               <p>ETIC_Algarve (01/2021 - 05/2021)
               <p>
-              <p>Posição: Marketing Digital e Social Media
+              <p>Position: Digital Marketing and Social Media
             </td>
           </tr>
           <tr>
             <td>
               <p>Comidas PT (05/2020 - 02/2021)
               <p>
-              <p>Posição: Marketing Digital e Social Media
+              <p>Position: Digital Marketing and Social Media
             </td>
           </tr>
           <tr>
             <td>
               <p>SFC (06/2019 - 09/2019)
               <p>
-              <p>Posição: Marketing Digital e Social Media
+              <p>Position: Digital Marketing and Social Media
             </td>
           </tr>
           <tr>
-            <th>Audio Visuais</th>
+            <th>Audiovisual</th>
           </tr>
           <tr>
             <td>
               <p>ETIC_Algarve (12/2017 - 01/2018)
               <p>
-              <p>Posição: Formadora no módulo Motion Graphics de duração de 1 mês
+              <p>Position: Trainer in Motion Graphics.
             </td>
           </tr>
           <tr>
             <td>
               <p>Niobo (10/2017 - 03/2018)
               <p>
-              <p>Posição: Editora de Video, Motion Graphics
+              <p>Position: Video Editor and Motion Graphics
             </td>
           </tr>
           <tr>
             <td>
               <p>Irmã Lucia VFX (02/2017 - 04/2017)
               <p>
-              <p>Posição: Estágio Curricular (2 meses) em “Jacinta”,“Timezone”,
-                “Henry Malaca ” e “Farpões Báldeos”
+              <p>Position: Trainee in “Jacinta”,“Timezone”,
+                “Henry Malaca ” and “Farpões Báldeos”
             </td>
           </tr>
         </table>
@@ -151,23 +151,23 @@
             <td>HTML, CSS e Javascript</td>
           </tr>
           <tr>
-            <th>Aptidões</th>
+            <th>Skills</th>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
             <td>SEO (Search Engine Optimization)</td>
           </tr>
           <tr>
-            <td>⭐⭐⭐⭐</td>
+            <td>⭐⭐⭐</td>
             <td>Full Stack Developer</td>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>Edição de Vídeo / Podcast </td>
+            <td> Vídeo / Podcast Editing</td>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>Edição de Imagem</td>
+            <td>Photo Editing</td>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐</td>
@@ -175,7 +175,7 @@
           </tr>
           <tr>
             <td>⭐⭐⭐⭐</td>
-            <td>Fotografia</td>
+            <td>Photography</td>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐</td>
@@ -183,11 +183,11 @@
           </tr>
           <tr>
             <td>⭐⭐⭐⭐</td>
-            <td> Gestor de Redes Sociais</td>
+            <td> Social Media Manager</td>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>Tradução (PT e Eng)</td>
+            <td>Translator (PT and Eng)</td>
           </tr>
         </table>
       </td>
@@ -198,7 +198,7 @@
       <td>
         <table style="text-align:center;">
           <tr>
-            <th>Formação</th>
+            <th>Education</th>
           </tr>
           <tr>
             <td><p>Udemy - The Complete 2022 Web Development Bootcamp
@@ -212,50 +212,50 @@
             <td>João Miguel Lopes - Masterclass Storytelling (7/10/2019)</td>
           </tr>
           <tr>
-            <td><p>ETIC_Algarve - Curso Técnico de Marketing Digital e Social Media (10/2019-06/2020)</p>
-            <p>UC: SEO, Social Media I e II, Web Analytics, Publicidade</td>
+            <td><p>ETIC_Algarve - Technical course on Digital Marketing and Social Media (10/2019-06/2020)</p>
+            <p> SEO, Social Media I e II, Web Analytics, Publicidade</td>
           </tr>
           <tr>
-            <td><p>UALG - Licenciatura Imagem Animada (09/2014-06/2017)</p>
-            <p>UC: Tipografia I e II, Design Multimédia e Comunicação, Modelação 3D, Animação 3D, Fotografia, Teoria da Psicologia Visual</td>
+            <td><p>UALG - Degree in Motion Animation (09/2014-06/2017)</p>
+            <p> Tipografia I e II, Design Multimédia e Comunicação, Modelação 3D, Animação 3D, Fotografia, Teoria da Psicologia Visual</td>
           </tr>
           <tr>
             <td><p>ESTC - Curso Humanístico-Ciêntifico de Artes Visuais (09/2011-06/2014)</p>
-            <p>UC: Desenho I, II e III, Matemática B, História e Cultura das Artes, Multimédia</td>
+            <p> Desenho I, II e III, Matemática B, História e Cultura das Artes, Multimédia</td>
           </tr>
         </table>
       </td>
       <td>
         <table cellspacing="20">
           <tr>
-            <th>Competências</th>
+            <th>Qualities</th>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>Organizada</td>
+            <td>Organization</td>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>Espírito de Equipa</td>
+            <td>Team Player</td>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>Assiduidade / Pontualidade</td>
+            <td>Pontuality</td>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>Responsável</td>
+            <td>Responsability</td>
           </tr>
           <tr>
-            <th>Idiomas</th>
-          </tr>
-          <tr>
-            <td>⭐⭐⭐⭐⭐</td>
-            <td>Português</td>
+            <th>Languages</th>
           </tr>
           <tr>
             <td>⭐⭐⭐⭐⭐</td>
-            <td>Inglês</td>
+            <td>Portuguese</td>
+          </tr>
+          <tr>
+            <td>⭐⭐⭐⭐⭐</td>
+            <td>English</td>
           </tr>
         </table>
   </table>
