--- a/contacto.html
+++ b/contacto.html
@@ -5,8 +5,7 @@
   <title>Contact</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
-    <a href="curriculo.html">CV</a>
+    <a href="index.html">CV</a>
   <a href="contacto.html"> Contact</a>
   <form action="http://formspree.io/joanasvsousa@outlook.com" method="post" enctype="text/plain">
     <label>Name</label>
